Run all maven tests as one matrix and include ingestion-core (#1811)